teamcity/agent.yaml
apiVersion: v1
kind: Service
metadata:
  name: teamcity-agent-headless
  namespace: teamcity
  labels:
    app: teamcity-agent
spec:
  clusterIP: None
  selector:
    app: teamcity-agent
  ports:
    - name: agent
      port: 9090
      targetPort: 9090


---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: teamcity-agent
  labels:
    app: teamcity-agent
  namespace: teamcity
spec:
  replicas: 2
  serviceName: teamcity-agent-headless
  selector:
    matchLabels:
      app: teamcity-agent
  template:
    metadata:
      labels:
        app: teamcity-agent
    spec:
      containers:
        - name: app
          image: kvtodev/teamcity-agent:latest
          imagePullPolicy: Always
          securityContext:
            privileged: true
          volumeMounts:
            - name: cache
              mountPath: /cache
              subPath: cache
            - name: cache
              mountPath: /var/lib/containers
              subPath: podman
            - name: conf
              mountPath: /data/teamcity_agent/conf
  volumeClaimTemplates:
    - metadata:
        name: cache
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-storage
        resources:
          requests:
            storage: 128Gi
        selector:
          matchLabels:
            type: teamcity-agent-cache
    - metadata:
        name: conf
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: longhorn
        resources:
          requests:
            storage: 128Mi
