teamcity/db.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: teamcity-postgres
  namespace: teamcity
spec:
  serviceName: teamcity-postgres
  replicas: 1
  selector:
    matchLabels:
      app: teamcity-postgres
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 16Gi
        storageClassName: longhorn
  template:
    metadata:
      labels:
        app: teamcity-postgres
    spec:
      securityContext:
        fsGroup: 999
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: postgres
          image: postgres:18.1
          ports:
            - containerPort: 5432
              name: postgres
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
          livenessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 10
            periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: teamcity-postgres
  namespace: teamcity
spec:
  selector:
    app: teamcity-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
  type: ClusterIP
