teamcity/server.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: teamcity
  namespace: teamcity
spec:
  serviceName: teamcity
  replicas: 1
  selector:
    matchLabels:
      app: teamcity
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 16Gi
        storageClassName: longhorn
  template:
    metadata:
      labels:
        app: teamcity
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: teamcity-server
          image: jetbrains/teamcity-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8111
              name: container-port
          volumeMounts:
            - name: data
              mountPath: /data/teamcity_server/datadir
          startupProbe:
            tcpSocket:
              port: container-port
            initialDelaySeconds: 60
            periodSeconds: 15
            failureThreshold: 80
          readinessProbe:
            httpGet:
              path: /healthCheck/healthy
              port: container-port
            initialDelaySeconds: 60
            periodSeconds: 15
            failureThreshold: 12
          livenessProbe:
            httpGet:
              path: /healthCheck/healthy
              port: container-port
            initialDelaySeconds: 420
            periodSeconds: 30
            failureThreshold: 5

---
apiVersion: v1
kind: Service
metadata:
  name: teamcity
  namespace: teamcity
spec:
  selector:
    app: teamcity
  ports:
    - name: service-port
      port: 8111
      targetPort: container-port
  type: ClusterIP
