teamcity/teamcity.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: teamcity
  namespace: teamcity
spec:
  serviceName: teamcity
  replicas: 1
  selector:
    matchLabels:
      app: teamcity
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 128Gi
        storageClassName: longhorn
    - metadata:
        name: logs
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 16Gi
        storageClassName: longhorn
  template:
    metadata:
      labels:
        app: teamcity
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: teamcity-server
          image: jetbrains/teamcity-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8111
              name: http
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: "2"
              memory: 4Gi
          volumeMounts:
            - name: data
              mountPath: /data/teamcity_server/datadir
            - name: logs
              mountPath: /opt/teamcity/logs
          startupProbe:
            tcpSocket:
              port: 8111
            initialDelaySeconds: 60
            periodSeconds: 15
            failureThreshold: 80
          readinessProbe:
            httpGet:
              path: /healthCheck/healthy
              port: 8111
            initialDelaySeconds: 60
            periodSeconds: 15
            failureThreshold: 12
          livenessProbe:
            httpGet:
              path: /healthCheck/healthy
              port: 8111
            initialDelaySeconds: 420
            periodSeconds: 30
            failureThreshold: 5

---
apiVersion: v1
kind: Service
metadata:
  name: teamcity
  namespace: teamcity
spec:
  selector:
    app: teamcity
  ports:
    - name: http
      port: 8111
      targetPort: http
  type: ClusterIP
