teamcity/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teamcity
  namespace: teamcity
spec:
  tls:
    - hosts:
        - teamcity.k88936.top
      secretName: teamcity-tls
  rules:
    - host: teamcity.k88936.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: teamcity
                port:
                  number: 8111
